# TRACE

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  fly.toml  pyproject.toml  railway.toml  render.yaml  requirements-dev.txt  requirements-ml.txt  requirements.txt
config/: camera-junction-01.yaml  default.yaml  roboflow-fast.yaml  roboflow-plates.yaml  roboflow.yaml  roboflow_models.yaml  viovision.yaml
dashboard/: index.html  styles.css
docs/: DEPLOY_ALTERNATIVES.md  DEPLOY_RENDER.md  DEPLOY_VPS.md  EVALUATION.md  REQUIREMENTS-COVERAGE.md  TRACE-Concept-Note.html  TRACE-Concept-Note.md
scripts/: benchmark.py  build_ocr_from_roboflow_inference.py  build_plate_line_dataset.py  build_rider_multilabel_dataset.py  build_seatbelt_dataset.py  calibrate_camera.py  demo_ocr.py  demo_real.py  download_seatbelt_karan_eval.py  eval_seatbelt.py  fetch_weights.py  import_idd_lite.py  import_seatbelt_manual.py  judge_demo.sh  load_roboflow_config.py  patch_manifest.py  prepare_all_datasets.py  prepare_quick_train_pack.py  render_start.sh  roboflow_download_eval.py  run_eval.py  run_full_eval.py  run_quick_train.py  run_real_eval.py  seed_demo.py  train_all.py  vps_bootstrap.sh
tests/: test_api.py  test_calibration.py  test_corrector.py  test_geometry.py  test_metrics.py  test_ocr_availability.py  test_preprocessing.py  test_storage.py  test_tracker.py  test_violation_engine.py  test_violation_rules.py
trace_cv/: __init__.py  cli.py  demo.py  pipeline.py
training/: README.md  _common.py  augment.py  (+10 more)
(+1110 files in other folders)
