[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trace-cv"
version = "0.1.0"
description = "TRACE — Traffic Rule Analysis & Compliance Engine: automated traffic-violation detection from images."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
    "SQLAlchemy>=2.0",
    "PyYAML>=6.0",
    "aiofiles>=23.0",
    "Jinja2>=3.1",
]

[project.optional-dependencies]
ml = [
    "ultralytics>=8.2",
    "torch>=2.2",
    "torchvision>=0.17",
    "easyocr>=1.7",
    "supervision>=0.20",
    "albumentations>=1.4",
    "scikit-learn>=1.4",
]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
trace = "trace_cv.cli:main"

[tool.setuptools.packages.find]
include = ["trace_cv*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
